--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 .wrapper {
   width: 100%;
   height: 100vh;
-  background-color: red;
+  background-color: black;
 }
 /* Flex */
 .main {
@@ -29,9 +29,63 @@ body {
   height: 100%;
   background: blue;
 }
+/* main nav header */
 .main-nav-header {
-  background-color: purple;
+  margin-bottom: 20px;
 }
+.main-nav-header h2 {
+  font-size: 30px;
+  padding-top: 15px;
+}
+.fa-spotify {
+  padding-top: 5px;
+  padding-left: 15px;
+  padding-right: 5px;
+  font-size: 45px;
+  vertical-align: middle;
+  padding-bottom: 15px;
+}
+.fa-home, .fa-search, .fa-bookmark {
+  padding-left: 15px;
+  font-size: 20px;
+  padding-bottom: 8px;
+  padding-right: 3px;
+  color: #919496;
+}
+.menu-spotify a {
+  color: #919496;
+  text-decoration: none;
+}
+.menu-spotify a:hover {
+  color: rgb(187, 197, 200);
+}
+.menu-spotify i:hover {
+  color: rgb(187, 197, 200);
+}
+/* /main nav header */
+/* crea lista */
+.fa-plus-square {
+  font-size: 35px;
+  color: #919496;
+  padding-top: 5px;
+}
+.fa-plus-square:hover {
+  color: rgb(187, 197, 200);
+}
+.title-playlist {
+  padding-left: 15px;
+}
+.title-playlist a {
+  font-size: 20px;
+  color: #919496;
+  text-decoration: none;
+  margin-left: 10px;
+}
+.title-playlist a:hover {
+  color: rgb(187, 197, 200);
+}
+/* /crea lista */
+/* main-nav-main */
 .main-nav-main {
   min-height: 150px;
   overflow-y: auto;
@@ -39,11 +93,43 @@ body {
   background-color: lime;
 }
 .playlist {
-
+  margin-top: 15px;
+  padding-left: 15px;
 }
+.playlist li{
+  list-style: none;
+  padding-bottom: 15px;
+}
+/* /main-nav-main */
+/* main-nav-footer */
 .main-nav-footer {
   background-color: brown;
 }
+.main-nav-footer p, h4{
+  display: inline;
+  margin-left: 5px;
+}
+.container-nav-footer {
+  padding: 15px;
+}
+.container-nav-footer h4{
+  font-weight: bold;
+  font-size: 15px;
+}
+.container-nav-footer i {
+  margin: 5px 0;
+}
+.fa-user-circle {
+  font-size: 25px;
+  vertical-align: middle;
+}
+.fa-arrow-circle-down {
+  font-size: 13px;
+}
+.margin-navfooter-10 {
+  padding-left: 5px;
+}
+
 
 /* main content */
 .main-content {
@@ -98,14 +184,13 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
 }
-.mix {
-  height: 150px;
-  width: 150px;
-  background-color: red;
+.in {
+  background-color: blue;
+  padding: 40%;
 }
 /* footer */
-.footer {
+/* .footer {
   width: 100%;
   height: 90px;
   background-color: pink;
-}
+} */
