--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,20 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+/* regole generali */
+a {
+  text-decoration: none;
+  /* /regole generali */
+}
 body {
   background-color: black;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .wrapper {
   width: 100%;
   height: 100vh;
-  background-color: black;
+  background-color: #282828;
 }
 /* Flex */
 .main {
@@ -27,7 +32,7 @@ body {
   justify-content: space-between;
   width: 320px;
   height: 100%;
-  background: blue;
+  background: #040404;
 }
 /* main nav header */
 .main-nav-header {
@@ -55,7 +60,6 @@ body {
 }
 .menu-spotify a {
   color: #919496;
-  text-decoration: none;
 }
 .menu-spotify a:hover {
   color: rgb(187, 197, 200);
@@ -67,7 +71,7 @@ body {
 /* crea lista */
 .fa-plus-square {
   font-size: 35px;
-  color: #919496;
+  color: rgb(187, 197, 200,0.8);
   padding-top: 5px;
 }
 .fa-plus-square:hover {
@@ -78,8 +82,7 @@ body {
 }
 .title-playlist a {
   font-size: 20px;
-  color: #919496;
-  text-decoration: none;
+  color: rgb(187, 197, 200,0.8);
   margin-left: 10px;
 }
 .title-playlist a:hover {
@@ -94,7 +97,7 @@ body {
   min-height: 150px;
   overflow-y: auto;
   flex-grow: 2;
-  background-color: lime;
+  background-color: #040404;
 }
 .playlist {
   margin-top: 15px;
@@ -103,15 +106,17 @@ body {
 .playlist li{
   list-style: none;
   padding-bottom: 15px;
+  color: rgb(187, 197, 200,0.8);
 }
 /* /main-nav-main */
 /* main-nav-footer */
 .main-nav-footer {
-  background-color: brown;
+  background-color: #040404;
 }
 .main-nav-footer p, h4{
   display: inline;
   margin-left: 5px;
+  color: white;
 }
 .container-nav-footer {
   padding: 15px;
@@ -122,6 +127,7 @@ body {
 }
 .container-nav-footer i {
   margin: 5px 0;
+  color: white;
 }
 .fa-user-circle {
   font-size: 25px;
@@ -140,7 +146,7 @@ body {
 .main-content {
   width: calc(100% - 320px);
   height: 100%;
-  background-color: orange;
+  background-color: #121212;
   overflow-y: scroll;
 }
 .call-to-action {
@@ -154,7 +160,10 @@ body {
   height: 90px;
   padding: 5px;
   background-color: rgba(0, 0, 0, 0.5);
-  padding-right: 20px;
+  padding-right: 30px;
+}
+.call-to-action:hover .btn {
+  background-color: rgb(187, 197, 200, 0.5);
 }
 .btn {
   display: inline-block;
@@ -174,44 +183,62 @@ body {
   list-style: none;
   display: inline-block;
   margin: 0 20px;
-  color: rgb(187, 197, 200);
+  color: rgb(187, 197, 200, 0.8);
 }
 .recently-played {
-  padding-left: 15.5px;
+  padding-left: 60px;
+  margin-top: 50px;
+}
+.recently-played h2 {
+  color: #fff;
 }
 .container-flex-song {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
   flex-wrap: wrap;
+  padding: 60px;
+}
+.container-flex-song a {
+  color: #fff;
+}
+.recently-played p, .container-flex-song p {
+  color: rgb(187, 197, 200,0.8);
+  font-size: 13px;
 }
 .album {
-  height: 150px;
-  width: 150px;
-  background-color: rgba(64, 70, 71, 0.9);
-  margin: 10px 0;
+  height: 200px;
+  width: 200px;
+  margin-right: 20px;
+  background-color: rgba(27, 28, 28, 0.87);
   position: relative;
+}
+.album:hover img{
+  opacity: 30%;
+}
+.album:hover .fa-play-circle {
+  display: block;
+}
+.album .fa-play-circle:hover {
+  color: rgba(#dadfe2, 0.76);
+  font-size: 45px;
+}
 
-}
-.album .in:hover {
-  opacity: 20%;
-}
-.fa-plus {
+.album .fa-play-circle {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  overflow: hidden;
-}
-.fa-plus:hover {
+  font-size: 40px;
+  color: #fff;
   display: none;
 }
-.container-flex-mix .album {
-  display: inline-block;
-  margin: 0.9%;
-}
+
 .in img {
   width: 100%;
+}
+.in {
+  text-align: center;
 }
 /* footer */
 /* .footer {
