--- a/css/style.css
+++ b/css/style.css
@@ -252,8 +252,165 @@ body {
   border-radius: 100%;
 }
 /* footer */
-/* .footer {
+.footer {
   width: 100%;
   height: 90px;
   background-color: pink;
-} */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.box-footer-left {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.brano-nome img {
+  height: 60px;
+  width: 60px;
+  margin: 15px;
+}
+.text-brano-nome {
+  font-size: 12px;
+  line-height: 1.2;
+  padding-top: 30px;
+}
+.icon-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 30px;
+}
+.icon-footer i {
+  font-size: 20px;
+  margin-right: 10px;
+}
+/* box footer center */
+.box-footer-center {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.icon-player {
+  text-align: center;
+  padding-top: 10px;
+}
+
+i.icons {
+  font-size: 25px;
+  margin: 0 25px;
+}
+i.action-play {
+  font-size: 40px;
+}
+.footer-center-bottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.box-line-bar {
+  position: relative;
+  background-color: rgba(121, 118, 124, 0.6);
+  height: 5px;
+  width: 70%;
+  top: 10px;
+  border-radius: 10px;
+}
+.line-bar-footer {
+  background-color: rgb(233, 229, 237);
+  height: 2px;
+  width: 40%;
+  padding: 3px;
+  border-radius: 10px;
+}
+.line-bar-ball {
+  position: absolute;
+  background-color: #fff;
+  height: 5px;
+  width: 5px;
+  padding: 1.5%;
+  margin-left: 38%;
+  top: -2px;
+  border-radius: 100%;
+  display: none;
+}
+.box-footer-center:hover .line-bar-footer{
+  background-color: green;
+}
+.box-footer-center:hover .line-bar-ball {
+  display: block;
+}
+.minute {
+  display: flex;
+  flex-direction: row;
+  font-size: 13px;
+  font-weight: bold;
+}
+.minute-left {
+  margin-right: 400px;
+}
+/* /box footer center */
+/* box-footer-right */
+.box-footer-right {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  
+}
+.footer-right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.icons-footer-right {
+  width: 250px;
+  text-align: center;
+}
+.icons-footer-right i {
+  font-size: 17px;
+  margin: 0 10px;
+  line-height: 2.4;
+}
+.box-line-right {
+  height: 40px;
+  width: 200px;
+  background-color: blue;
+  text-align: center;
+}
+.box-line-right{
+  position: relative;
+  height: 6px;
+  width: 80%;
+  background-color: rgba(121, 118, 124, 0.6);
+  margin: 0 10px;
+  vertical-align: middle;
+  border-radius: 10px;
+}
+.line-bar-footer-right {
+  background-color: rgb(233, 229, 237);
+  height: 4px;
+  width: 40%;
+  border-radius: 10px;
+  padding: 3px;
+}
+.line-bar-ball-right {
+  position: absolute;
+  background-color: #fff;
+  height: 9px;
+  width: 9px;
+  margin-left: 36%;
+  top: -1.5px;
+  border-radius: 100%;
+  display: none;
+}
+.box-footer-right:hover .line-bar-footer-right {
+  background-color: green;
+}
+.box-footer-right:hover .line-bar-ball-right {
+  display: block;
+}
