--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,9 @@ body {
 .margin-navfooter-10 {
   padding-left: 5px;
 }
+.margin-navfooter-10:hover {
+  cursor: pointer;
+}
 /* main-nav-footer */
 
 
@@ -179,6 +182,13 @@ body {
   color: rgb(187, 197, 200);
   text-decoration: none;
 }
+.main-top {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
 .lista-main-top {
   margin-top: 110px;
   text-align: center;
@@ -194,6 +204,7 @@ body {
 .lista-main-top a:hover{
   color: #fff;
   border-bottom: 3px solid green;
+  cursor: pointer;
 }
 .recently-played {
   padding-left: 60px;
@@ -232,6 +243,7 @@ body {
 .album .fa-play-circle:hover {
   color: rgba(#dadfe2, 0.76);
   font-size: 45px;
+  cursor: pointer;
 }
 .album .fa-play-circle {
   position: absolute;
@@ -255,7 +267,7 @@ body {
 .footer {
   width: 100%;
   height: 90px;
-  background-color: pink;
+  background-color: #282828;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -275,6 +287,13 @@ body {
   line-height: 1.2;
   padding-top: 30px;
 }
+.text-brano-nome h3{
+  color: #fff;
+  margin-bottom: 5px;
+}
+.text-brano-nome h5{
+  color: rgba(197, 193, 204, 0.6);
+}
 .icon-footer {
   display: flex;
   flex-direction: row;
@@ -284,6 +303,11 @@ body {
 .icon-footer i {
   font-size: 20px;
   margin-right: 10px;
+  color: rgba(197, 193, 204, 0.6);
+}
+.icon-footer i:hover {
+  color: #fff;
+  cursor: pointer;
 }
 /* box footer center */
 .box-footer-center {
@@ -292,6 +316,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: #fff;
 }
 .icon-player {
   text-align: center;
@@ -339,9 +364,11 @@ i.action-play {
 }
 .box-footer-center:hover .line-bar-footer{
   background-color: green;
+  cursor: pointer;
 }
 .box-footer-center:hover .line-bar-ball {
   display: block;
+  cursor: pointer;
 }
 .minute {
   display: flex;
@@ -360,7 +387,7 @@ i.action-play {
   justify-content: center;
   align-items: center;
   height: 80px;
-  
+  color: #fff;
 }
 .footer-right {
   display: flex;
@@ -410,7 +437,18 @@ i.action-play {
 }
 .box-footer-right:hover .line-bar-footer-right {
   background-color: green;
+  cursor: pointer;
 }
 .box-footer-right:hover .line-bar-ball-right {
   display: block;
+  cursor: pointer;
+}
+/* /box-footer-right */
+
+/* media-query */
+/* md */
+@media screen and (max-width:1200px) {
+  .main-nav-main {
+    display: none;
+  }
 }
